<resources>
    <string name="app_name">BaiTapDialogDeMo</string>
    <string name="create_new_note">Create New Note</string>
    <string name="title">title</string>
    <string name="save">SAVE</string>
    <string name="description">Description</string>
    <string name="tag">Tags:</string>
    <string name="type">Type:</string>
    <string name="tag_default"><b>Android,VTC,FPT,Game</b></string>
    <string name="type_default"><b>Mon,Thu,Sat</b></string>
    <string name="week">Week:</string>
    <string name="remind">Remind me at:</string>
    <string name="tune">Tune</string>
</resources>