<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="horizontal"
            android:background="@drawable/bg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_new_note"
                android:textSize="35dp"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:id="@+id/tvMenuCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:text=" "/>
            </LinearLayout>
        </LinearLayout>
        <EditText
            android:text="@string/title"
            android:background="@drawable/bg1"
            android:layout_margin = "15dp"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg1"
            android:layout_margin="15dp"
            android:layout_height="80dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:background="@null"
                android:inputType="textMultiLine"
                android:textSize="15dp"/>


        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/remind"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="15dp">
            <TextView
                android:id="@+id/tvTimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="40dp"
                android:text="14:20"/>
            <TextView
                android:id="@+id/tvDatePicker"
                android:layout_width="0dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="40dp"
                android:text="04/03/2016"/>
        </LinearLayout>

        <LinearLayout
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag"/>
            <TextView
                android:id="@+id/tvTags"
                android:textStyle="bold"
                android:text="@string/tag_default"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/type"
                android:layout_height="wrap_content"/>
            <Spinner
                android:layout_marginLeft="5dp"
                android:id="@+id/spMonHoc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_margin="15dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/week"/>
            <TextView
                android:id="@+id/tvWeek"
                android:textStyle="bold"
                android:layout_marginLeft="5dp"
                android:text="@string/type_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tvTune"
            android:gravity="center"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/tune"
            android:background="@drawable/bg1"/>

    </LinearLayout>


</layout>